<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true">

    <LinearLayout
        android:id="@+id/content_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_left_margin"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="center"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/purchased_content_textVIew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/textGray"
                android:textStyle="bold"
                tools:text="Some purchase content" />

            <TextView
                android:id="@+id/app_name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                tools:text="Some app name" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/app_description"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:maxLines="4"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_info_layout" />

    <TextView
        android:id="@+id/transcation_details_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_left_margin"
        android:text="@string/transaction_details"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_description" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_left_margin"
        android:layout_marginTop="8dp"
        android:text="@string/account_id"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transcation_details_field" />


    <ProgressBar
        android:id="@+id/account_address_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_weight="1"
        app:layout_constraintStart_toEndOf="@+id/account_address_field"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/account_address_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_left_margin"
        android:layout_weight="1"
        android:ellipsize="middle"
        android:singleLine="true"
        android:text="..."
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="0xdB2301db944a59680619F86017418EBb10b***4b" />

    <TextView
        android:id="@+id/host_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_left_margin"
        android:text="@string/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_address_field" />

    <TextView
        android:id="@+id/host_address_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_left_margin"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_address"
        tools:text="0x544736874653" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="@dimen/default_left_margin"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/content_price"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_address_field" />

    <TextView
        android:id="@+id/price_textView"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="@dimen/default_left_margin"
        android:ellipsize="middle"
        android:gravity="center_vertical"
        android:maxLength="9"
        android:singleLine="true"
        android:textColor="@color/buttonGreen"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="2.443242343212" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:alpha="0.2"
        android:background="@color/balance_bg"
        app:layout_constraintBottom_toBottomOf="@+id/account_balance_field"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/eth"
        android:textAllCaps="true"
        android:textColor="@color/buttonGreen"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/price_textView"
        app:layout_constraintStart_toEndOf="@+id/price_textView"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_left_margin"
        android:layout_marginTop="20dp"
        android:text="@string/account_balance"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_textView" />


    <ProgressBar
        android:id="@+id/account_balance_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/account_balance_field"
        app:layout_constraintStart_toEndOf="@+id/balance_currency"
        app:layout_constraintTop_toTopOf="@+id/account_balance_field" />

    <TextView
        android:id="@+id/account_balance_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_left_margin"
        android:layout_weight="1"
        android:ellipsize="middle"
        android:maxLength="11"
        android:singleLine="true"
        android:text="..."
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/balance_currency"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:text="@string/eth"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/account_balance_field"
        app:layout_constraintTop_toTopOf="@+id/account_balance_field" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="@dimen/default_left_margin"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:textColorHint="@color/buttonGreen"
        android:visibility="gone"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:passwordToggleEnabled="true"
        tools:visibility="gone">

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonGreen"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="18"
            android:textColor="@color/buttonGreen"
            android:textSize="16sp"
            tools:ignore="TextFields"
            tools:text="gafgsdfgdgfdgsdfgds" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/error_holder"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="@dimen/default_left_margin"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="5"
        app:layout_constraintBottom_toTopOf="@+id/buttons_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:visibility="visible">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="@color/error_text"
            tools:text="Can't reach server, please check internet connection." />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_linearLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/default_left_margin"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_transfer_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_padding"
            android:layout_weight="1"
            android:background="@color/colorClear"
            android:text="@string/cancel_button"
            android:textColor="@color/colorDarkGreen"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/continue_transfer_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_padding"
            android:layout_weight="1"
            android:background="@drawable/transfer_selected_button"
            android:text="@string/continue_button"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:visibility="invisible"
            tools:ignore="ButtonStyle"
            tools:visibility="visible" />

        <Button
            android:id="@+id/repeat_transfer_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_padding"
            android:layout_weight="1"
            android:background="@drawable/transfer_selected_button"
            android:text="@string/try_again"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:visibility="gone"
            tools:ignore="ButtonStyle"
            tools:visibility="visible" />


        <ProgressBar
            android:id="@+id/tx_create_progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:visibility="gone" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>